@@ -1,3 +1,7 @@
+--July 14, 2009--
+- Now the TimeLine sets-up a menu for each item, available by right-clicking on it: implemented the
+  switch branch feature.
+
 --July 12, 2009--
 - Fixed a strange behaviour with GitRunner class which causes the app to continue runnig, even if
   the app is closed. Extended TimeLine class; now it shows in the main window the current branches
